--- a/assets/js/public/dashboard/tpl/upload.html
+++ b/assets/js/public/dashboard/tpl/upload.html
@@ -1,6 +1,6 @@
 <div ui-view></div>
 
-<div nv-file-drop="" uploader="uploader" filters="queueLimit, customFilter" class="col-sm-9  col-md-10  col-md-offset-2 col-sm-offset-2">
+<div class="col-sm-9  col-md-10  col-md-offset-2 col-sm-offset-2">
     <div class="page-header">
         <h1>Загрузка
             <small>Загрузите подготовленый прайс-лист.</small>
@@ -8,36 +8,65 @@
     </div>
 
 
-    <input type="file" multiple="multiple" name="avatar" nv-file-select uploader="uploader"/><br/>
-    <ul>
-        <li ng-repeat="item in uploader.queue">
-            Name: <span ng-bind="item.file.name"></span><br/>
-            <button ng-click="item.upload()">upload</button>
-        </li>
-    </ul>
+    <!--<form action="/file/upload" enctype="multipart/form-data" method="post">-->
+        <!--<input type="text" name="title"><br>-->
+        <!--<input type="file" name="avatar" multiple="multiple"><br>-->
+        <!--<input type="submit" value="Upload">-->
+    <!--</form>-->
+
+    <!--<form action="/file/upload" enctype="multipart/form-data" method="post">-->
+        <!--<input type="text" name="title"><br>-->
+        <!--<input type="file" name="avatar" multiple="multiple"><br>-->
+        <!--<input type="submit" value="Upload">-->
+    <!--</form>-->
 
 
+    <!--<input type="file" multiple="multiple" name="avatar" nv-file-select uploader="uploader"/><br/>-->
+    <!--<ul>-->
+        <!--<li ng-repeat="item in uploader.queue">-->
+            <!--Name: <span ng-bind="item.file.name"></span><br/>-->
+            <!--<button ng-click="item.upload()">upload</button>-->
+        <!--</li>-->
+    <!--</ul>-->
 
 
+    <!--<form name="myForm"  enctype="multipart/form-data" novalidate ng-submit="addNewPrice(newPrice, myForm.$valid)">-->
+        <!--<div class="form-group">-->
+            <!--&lt;!&ndash;<label for="inputPrice"></label>&ndash;&gt;-->
+            <!--&lt;!&ndash;<input type="file" name="avatar" multiple="multiple" ng-model="newPrice.avatar">&ndash;&gt;-->
+            <!--&lt;!&ndash;<input id="file_upload_element_id" type="file" onchange="angular.element(this).scope().doPhotoUpload()">&ndash;&gt;-->
 
-    <form name="myForm" novalidate ng-submit="addNewPrice(newPrice, myForm.$valid)">
-    <div class="form-group">
-        <!--<label for="inputPrice"></label>-->
-        <input type="file"  name="avatar" >
-        <p class="help-block">расширение файла .xlsx или .xls </p>
-        <div class="error" ng-show="showError">
-            {{getError(myForm.avatar.$error)}}
-        </div>
-    </div>
-    <button type="submit" class="btn btn-default">{{nameButton}}</button>
-        <div class="well">
-            Message: {{message}}
-            <div>
-                Valid:
-                    <span class="summary" ng-class="myForm.$valid ? 'ng-valid' : 'ng-invalid'">
-                        {{myForm.$valid}}
-                    </span>
-            </div>
-        </div>
-</form>
-    </div>
+            <!--<input type="file" file="file" required />-->
+
+            <!--<p class="help-block">расширение файла .xlsx или .xls </p>-->
+            <!--<div class="error" ng-show="showError">-->
+                <!--{{getError(myForm.avatar.$error)}}-->
+            <!--</div>-->
+            <!--{{getError(myForm.avatar.$error)}}-->
+        <!--</div>-->
+        <!--<button type="submit" class="btn btn-default">{{nameButton}}</button>-->
+        <!--<div class="well">-->
+            <!--Message: {{message}}-->
+            <!--<div>-->
+                <!--Valid:-->
+                    <!--<span class="summary" ng-class="myForm.$valid ? 'ng-valid' : 'ng-invalid'">-->
+                        <!--{{myForm.$valid}}-->
+                    <!--</span>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</form>-->
+
+    <form  action="/file/upload" enctype="multipart/form-data" method="post" >
+        <input type="text" name="title"><br>
+        <input type="file"  name="avatar"  multiple="multiple"><br>
+        <input type="submit" value="Upload">
+    </form>
+
+    <!--<form name="myForm" enctype="multipart/form-data" ng-submit="addNewPrice(newPrice, myForm.$valid)" >-->
+        <!--<input type="text" name="title"><br>-->
+        <!--<input type="file" file="file" name="avatar" ng-model="newPrice.avatar" multiple="multiple"><br>-->
+        <!--<input type="submit" value="Upload">-->
+        <!--</form>-->
+
+
+</div>
