Edit matrix fix

--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -65,9 +65,14 @@
             <!--<input type="file"  nv-file-select="" uploader="uploader" /><br/>-->
             <!-- Example: nv-file-select="" uploader="{Object}" options="{Object}" filters="{String}" -->
 
-            <input type="file" nv-file-select="" uploader="uploader" multiple  />
-
-
+            <!--<input type="file" nv-file-select="" uploader="uploader" multiple  />-->
+<!--<button class="btn btn-primary">Выбрать прайс</button>-->
+            <div class="file-upload">
+                <label>
+                    <input type="file"  nv-file-select="" uploader="uploader" multiple />
+                    <span>Выбрать прайс</span>
+                </label>
+            </div>
 
 
         </div>
