Edit validation column

--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -121,7 +121,7 @@
                     <!--</td>-->
 
                     <td class="text-center">
-                        <a ng-if="goReport" class="btn btn-default"  target="_blank" href="/images/price/report/{{pathToReport}}">
+                        <a ng-if="goReport" class="btn btn-default"  target="_blank" href="{{pathToReport}}">
                             <span  class="glyphicon glyphicon-list-alt "></span>
                             Скачать
                         </a>
