--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -105,7 +105,7 @@
                     <td class="text-center">
                         <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok  text-success"></i></span>
                         <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                        <span ng-show="item.isError"><i class="glyphicon glyphicon-remove text-danger"></i></span>
+                        <span ng-show="item.isError" title="Проверка не пройдена"><i class="glyphicon glyphicon-remove text-danger"></i></span>
                     </td>
                     <!--<td >-->
 
