--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -87,7 +87,7 @@
                 <tr>
                     <th width="50%">Имя</th>
                     <th ng-show="uploader.isHTML5">Размер</th>
-                    <th ng-show="uploader.isHTML5">Прогресс</th>
+                    <!--<th ng-show="uploader.isHTML5">Прогресс</th>-->
                     <th class="text-center">Статус</th>
                     <!--<th>Описание ошибки</th>-->
                     <th class="text-center">Отчёт</th>
@@ -97,15 +97,15 @@
                 <tr ng-repeat="item in uploader.queue">
                     <td><strong>{{ item.file.name }}</strong></td>
                     <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
-                    <td ng-show="uploader.isHTML5">
-                        <div class="progress" style="margin-bottom: 0;">
-                            <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
-                        </div>
-                    </td>
+                    <!--<td ng-show="uploader.isHTML5">-->
+                        <!--<div class="progress" style="margin-bottom: 0;">-->
+                            <!--<div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>-->
+                        <!--</div>-->
+                    <!--</td>-->
                     <td class="text-center">
                         <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok  text-success"></i></span>
                         <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                        <span ng-show="item.isError" title="Проверка не пройдена"><i class="glyphicon glyphicon-remove text-danger"></i></span>
+                        <span ng-show="item.isError" title=""><i class="glyphicon glyphicon-remove text-danger"></i></span>
                     </td>
                     <!--<td >-->
 
@@ -121,7 +121,7 @@
                     <!--</td>-->
 
                     <td class="text-center">
-                        <a ng-if="goReport" class="btn btn-default"  target="_blank" href="{{pathToReport}}">
+                        <a ng-if="goReport" class="btn btn-default"  target="_blank" href="/images/price/report/{{pathToReport}}">
                             <span  class="glyphicon glyphicon-list-alt "></span>
                             Скачать
                         </a>
@@ -133,12 +133,12 @@
 
 
             <div>
-                <div>
-                    Прогресс загрузки очереди:
-                    <div class="progress" style="">
-                        <div class="progress-bar" role="progressbar" ng-style="{'width': uploader.progress + '%' }"></div>
-                    </div>
-                </div>
+                <!--<div>-->
+                    <!--Прогресс загрузки очереди:-->
+                    <!--<div class="progress" style="">-->
+                        <!--<div class="progress-bar" role="progressbar" ng-style="{'width': uploader.progress + '%' }"></div>-->
+                    <!--</div>-->
+                <!--</div>-->
                 <!--<button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">-->
                     <!--<span class="glyphicon glyphicon-upload"></span> Загрузить-->
                 <!--</button>-->
