--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -103,9 +103,18 @@
                         <!--</div>-->
                     <!--</td>-->
                     <td class="text-center">
-                        <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok  text-success"></i></span>
-                        <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                        <span ng-show="item.isError" title=""><i class="glyphicon glyphicon-remove text-danger"></i></span>
+                        <span ng-show="item.isSuccess">
+                            <!--<i class="glyphicon glyphicon-ok  text-success"></i>-->
+                            {{statusOk}}
+                        </span>
+                        <span ng-show="item.isCancel">
+                            <!--<i class="glyphicon glyphicon-ban-circle"></i>-->
+                            {{statusSec}}
+                        </span>
+                        <span ng-show="item.isError" title="">
+                            <!--<i class="glyphicon glyphicon-remove text-danger"></i>-->
+                             {{statusErr}}
+                        </span>
                     </td>
                     <!--<td >-->
 
@@ -121,7 +130,7 @@
                     <!--</td>-->
 
                     <td class="text-center">
-                        <a ng-if="goReport" class="btn btn-default"  target="_blank" href="/images/price/report/{{pathToReport}}">
+                        <a ng-if="goReport" class="btn btn-default"  target="_blank" href="{{pathToReport }}">
                             <span  class="glyphicon glyphicon-list-alt "></span>
                             Скачать
                         </a>
