--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -23,7 +23,7 @@
 <div class="col-sm-9  col-md-10  col-md-offset-2 col-sm-offset-2">
     <div class="page-header">
         <h1>Прайс лист  <small></small>
-        <a target="_blank" href="/images/price/full/price.xlsx" class="btn  btn-default btn-sm ">Скачать</a>
+       <a  type="submit" target="_blank" href="/images/price/full/price.xlsx" class="btn  btn-default btn-sm ">Скачать</a>
         </h1>
     </div>
     <!--<a href="/upload">Upload</a>-->
@@ -126,7 +126,7 @@
 
                     <td class="text-center">
                         <a ng-if="goReport" class="btn btn-default"  target="_blank" href="{{pathToReport }}">
-                            <span  class="glyphicon glyphicon-list-alt "></span>
+                            <!--<span  class="glyphicon glyphicon-list-alt "></span>-->
                             Скачать
                         </a>
                     </td>
@@ -147,7 +147,8 @@
                     <!--<span class="glyphicon glyphicon-ban-circle"></span> Отменить всё-->
                 <!--</button>-->
                 <button type="button" class="btn btn-default btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
-                    <span class="glyphicon glyphicon-trash"></span> Очистить всё
+                    <!--<span class="glyphicon glyphicon-trash"></span> -->
+                    Очистить всё
                 </button>
             </div>
 
