--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -39,7 +39,7 @@
 
     <div class="row">
 
-        <div class="col-md-3">
+        <div class="col-md-2">
 
             <!--<h3>Загрузить прайс</h3>-->
 
@@ -72,17 +72,20 @@
 
         </div>
 
-        <div class="col-md-9" style="margin-bottom: 40px">
+        <div class="col-md-10" style="margin-bottom: 40px">
 
-            <!--<h3>Очередь загрузки</h3>-->
-            <!--<p>Длина очереди: {{uploader.queue.length}}</p>-->
+            <h3>Очередь загрузки</h3>
+            <p>Длина очереди: {{uploader.queue.length}}</p>
 
             <table class="table">
                 <thead>
                 <tr>
-                    <th width="50%">Имя</th>
+                    <th width="30%">Имя</th>
+                    <th>Дата</th>
                     <th ng-show="uploader.isHTML5">Размер</th>
-                    <!--<th ng-show="uploader.isHTML5">Прогресс</th>-->
+                    <th ng-show="uploader.isHTML5">Принято</th>
+                    <th ng-show="uploader.isHTML5">Ошибок</th>
+                    <th ng-show="uploader.isHTML5">Прогресс</th>
                     <th class="text-center">Статус</th>
                     <!--<th>Описание ошибки</th>-->
                     <th class="text-center">Отчёт</th>
@@ -90,17 +93,20 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="item in uploader.queue">
-                    <td><strong>{{ item.file.name }}</strong></td>
+                    <td><strong>{{ item.file.name }}</strong> </td>
+                    <td>{{item.dateUpload}}</td>
                     <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
-                    <!--<td ng-show="uploader.isHTML5">-->
-                        <!--<div class="progress" style="margin-bottom: 0;">-->
-                            <!--<div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>-->
-                        <!--</div>-->
-                    <!--</td>-->
+                    <td>{{item.progress}}%</td>
+                    <td>{{item.errorPercent}}</td>
+                    <td ng-show="uploader.isHTML5">
+                        <div class="progress" style="margin-bottom: 0;">
+                            <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+                        </div>
+                    </td>
                     <td class="text-center">
                         <span ng-show="item.isSuccess">
                             <!--<i class="glyphicon glyphicon-ok  text-success"></i>-->
-                            {{statusOk}}
+                            {{item.statusOk}}
                         </span>
                         <span ng-show="item.isCancel">
                             <!--<i class="glyphicon glyphicon-ban-circle"></i>-->
@@ -125,7 +131,7 @@
                     <!--</td>-->
 
                     <td class="text-center">
-                        <a ng-if="goReport" class="btn btn-default"  target="_blank" href="{{pathToReport }}">
+                        <a ng-if="item.goReport" class="btn btn-default"  target="_blank" href="{{item.pathToReport}}">
                             <!--<span  class="glyphicon glyphicon-list-alt "></span>-->
                             Скачать
                         </a>
