--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -23,7 +23,7 @@
 <div class="col-sm-9  col-md-10  col-md-offset-2 col-sm-offset-2">
     <div class="page-header">
         <h1>Прайс лист  <small></small>
-       <a  type="submit" target="_blank" href="/images/price/full/price.xlsx" class="btn  btn-default btn-sm ">Скачать</a>
+      <span ng-hide="uploaderButtonPrice"> <a  type="submit" target="_blank" href="/images/price/full/price.xlsx" class="btn  btn-default btn-sm ">Скачать</a></span>
         </h1>
     </div>
     <!--<a href="/upload">Upload</a>-->
