--- a/assets/js/public/dashboard/tpl/dashboard.html
+++ b/assets/js/public/dashboard/tpl/dashboard.html
@@ -22,8 +22,8 @@
 
 <div class="col-sm-9  col-md-10  col-md-offset-2 col-sm-offset-2">
     <div class="page-header">
-        <h1>Прайс лист  <small></small>
-      <span ng-hide="uploaderButtonPrice"> <a  type="submit" target="_blank" href="/images/price/full/price.xlsx" class="btn  btn-default btn-sm ">Скачать</a></span>
+        <h1>Прайс лист  <small> от {{datePrice}}</small>
+      <span ng-hide="uploaderButtonPrice" style="padding-left: 17px">  <a  type="submit" target="_blank" href="/images/price/full/price.xlsx" class="btn  btn-success btn-sm ">Скачать </a></span>
         </h1>
     </div>
     <!--<a href="/upload">Upload</a>-->
